pkg/servicemesh/federation/example/config-poc/import/destinationrule-gateway.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: federation-egress
  namespace: mesh2-system
spec:
  # egress gateway service
  host: federation-egress.mesh2-system.svc.cluster.local
  subsets:
    # name = <service>-<target-mesh>
    - name: ratings-aliased-mesh1
      trafficPolicy:
        portLevelSettings:
          - port:
              # gateway port
              number: 15443
            tls:
              mode: ISTIO_MUTUAL
              # sni = exported service name (fqdn)
              sni: ratings.bookinfo.svc.mesh2.local
              #sni: ratings.mesh1-bookinfo.svc.cluster.local
    # additional subsets for other services
    - name: mongodb-aliased-mesh1
      trafficPolicy:
        portLevelSettings:
          - port:
              # gateway port
              number: 15443
            tls:
              mode: ISTIO_MUTUAL
              # sni = exported service name (fqdn)
              sni: mongodb.bookinfo.svc.mesh2.local
              #sni: mongodb.mesh1-bookinfo.svc.cluster.local
  exportTo:
    - '*'
